--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Jekyll #
 _site
 .sass-cache
 .jekyll-metadata
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# CERTIFICATES #
+######################
+*.cer
+*.mobileprovision
