Update pages layout

--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,10 @@ credits: 'Anoncoin'
 
 # Build settings
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  hard_wrap: false
+
 permalink: pretty
+ 
