--- a/_config.yml
+++ b/_config.yml
@@ -39,15 +39,13 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com
+    url: https://twitter.com/anoncoinproject
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com
-  - title: bitbucket
-    url: http://bitbucket.org
+    url: https://www.facebook.com/groups/Anoncoin/
+  - title: reddit
+    url: https://www.reddit.com/r/Anoncoin/
   - title: github
-    url: http://github.com
+    url: https://github.com/Anoncoin/anoncoin
 
 # Postal address (add as many lines as necessary)
 address:
