--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Anoncoin
-email: your-email@example.com
+email: info@anoncoin.net
 description: >- # this means to ignore newlines until "baseurl:"
   Anoncoin(ANC) is a unique decentralized peer to peer internet cryptocurrency that provides for its users. I2P and Tor compatible, it is resistant to crackdowns from hostile authorities.  
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -32,9 +32,9 @@ color:
 # Footer settings
 footer:
   copyright: Anoncoin
-  location: Location
+  location: Contact
   social: Around the Web
-  credits: Credits
+  credits: Chat with us
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -49,11 +49,12 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Somewhere
-  - line: Beverly Hills, CA 90210
+  - line: info@anoncoin.net
 
 # Credits content
-credits: 'Anoncoin'
+credits: 
+- line: '#anoncoin-dev @ IRC2P'
+- line: '#anoncoin-dev @ Freenode'
 
 # Build settings
 markdown: kramdown
