--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,11 @@ email: info@anoncoin.net
 description: >- # this means to ignore newlines until "baseurl:"
   Anoncoin(ANC) is a unique decentralized peer to peer internet cryptocurrency that provides for its users. I2P and Tor compatible, it is resistant to crackdowns from hostile authorities.  
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://anoncoin.net" # the base hostname & protocol for your site
+plugins:
+  - jekyll-sitemap
+
+
 twitter_username: anoncoinproject
 github_username:  anoncoin
 
@@ -66,4 +70,6 @@ kramdown:
   hard_wrap: false
 
 permalink: pretty
+
+
  
