Update blockchainexplorer and fix links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,7 +37,7 @@
   - title: Exchanges
     url: /Exchanges/
   - title: Blockchain explorer
-    url: http://anoncash.net/chain/Anoncoin
+    url: http://anoncash.net
   - title: Mining pools
     url: /Mining_pools/
   - title: separator
